Added database integration for posts

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
     <form action="/login" method="GET">
       <button>Login</button>
     </form>
+    <form action="/posts" method="GET">
+      <button>Create Post!</button>
+    </form>
     <!-- list of subreddits -->
     <!-- top posts of each subreddit -->
     <!-- sign in -->
