Image upload for posts, started cookies

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,11 @@
     <form action="/posts" method="GET">
       <button>Create Post!</button>
     </form>
+    <form action = "/setcookie" method = "POST">
+      <p><h3>Enter userID</h3></p>
+      <p><input type = 'text' name = 'cookie'/></p>
+      <p><input type = 'submit' value = 'Login'/></p>
+   </form>
     <!-- list of subreddits -->
     <!-- top posts of each subreddit -->
     <!-- sign in -->
