darkmode (cookie version) and profile page

--- a/templates/postTemplate.html
+++ b/templates/postTemplate.html
@@ -7,8 +7,7 @@
     <title>{{data.title}}</title>
   </head>
   <body>
-    <h1>{{data.title}}</h1>
-    <h3>{{data.author}}</h3>
+    <h1>{{data.title}} - By {{data.author}}</h1>
     {% if data.imageUrl %}
     <img src="{{data.imageUrl}}" alt="" width="300" height="300" />
     {% endif %}
