--- a/templates/allPosts.html
+++ b/templates/allPosts.html
@@ -13,8 +13,8 @@
       <a href="/posts"><button>Create Post</button></a>
       {% else %} {% for post in data: %}
       <div>
-        <h2>{{post.title}}</h2>
-        <h3>{{post.author}}</h3>
+        <h2>{{post.title}} - By {{post.author}}</h2>
+
         {% if post.imageUrl %}
         <img src="{{post.imageUrl}}" alt="" width="300" height="300" />
         {% endif %}
