fixed/completed darkmode

--- a/templates/accountTemplate.html
+++ b/templates/accountTemplate.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/static/styles.css">
     <title>{{data['username']}}'s Page!</title>
   </head>
-  {% if data['dark'] %} <body class="dark"> {% else %}
+  {% if data['darkmode'] %} <body class="dark"> {% else %}
   <body>
     {% endif %} 
     <h1>{{data['username']}}'s Profile</h1>
     <h2>Posts:</h2>
     {% if not data['userPosts'] %}
-    <h2>No posts yet 😭</h2>
+    <h2>No posts yet 😔</h2>
     {% endif %}
     {% for post in data['userPosts']%}
     <ul>
