--- a/templates/socketGame.html
+++ b/templates/socketGame.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static//styles.css" />
+    <link rel="stylesheet" href="/static/styles.css" />
     <title>Cookie Clicker!</title>
   </head>
+  {% if data['darkmode'] %} <body class="dark"> {% else %}
   <body>
+    {% endif %} 
     <div>
       <h2>Online Users</h2>
       <ul id="userList"></ul>
