--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" /> -->
+    <link rel="stylesheet" href="/static/styles.css">
     <title>Home Page!</title>
   </head>
+  {% if data['darkmode'] %} <body class="dark"> {% else %}
   <body>
-    {% if data: %}
-    <h1>Welcome, <span id="username">{{data.username}}</span></h1>
+    {% endif %} 
+    {% if data['user']: %}
+    <h1>Welcome, <span id="username">{{data['user'].username}}</span></h1>
     {% endif %}
     <form action="/register" method="GET">
       <button>Register</button>
@@ -23,8 +26,9 @@
     <form action="/posts" method="GET">
       <button>Create Post!</button>
     </form>
-    <a href="/user/{{data._id}}"><button>Profile Page</button></a> 
+    <a href="/user/{{data['user']._id}}"><button>Profile Page</button></a> 
     </br>
     <a href="/socketgame"><button>WebSocket Game!</button></a>
+    <a href="/posts/all"><button>All Posts</button></a>
   </body>
 </html>
