login and register flash done

--- a/templates/loginForm.html
+++ b/templates/loginForm.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>Hello! Please sign in:</h1>
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul class="flashes">
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
     <form action="/login" method="POST">
       <div>
         <label for="username">Username: </label>
