live DMs complete

--- a/templates/allPosts.html
+++ b/templates/allPosts.html
@@ -12,6 +12,7 @@
   <body>
     {% endif %} 
     <div>
+      <h1>All Posts:</h1>
       {% if not data.postList %}
       <h1>No posts yet!</h1>
       <a href="/posts"><button>Create Post</button></a>
